# viy

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
docs/: architecture.md  deobf-analysis-provider.md  hexrays-bridge.md  verification-matrix.md
src/: abi_policy.cpp  abi_policy.hpp  advanced.cpp  advanced.hpp  analysis_facts.cpp  analysis_facts.hpp  call_summary.cpp  call_summary.hpp  decoder_audit.cpp  decoder_audit.hpp  decoder_core.cpp  decoder_core.hpp  deobf_analysis.cpp  deobf_analysis.hpp  deobf_analysis_core.cpp  deobf_analysis_core.hpp  deobf_analysis_store.cpp  diagnostics.cpp  diagnostics.hpp  emu_driver.cpp  emu_driver.hpp  emu_input.hpp  emulation_rax_executor.cpp  emulation_rax_executor.hpp  emulation_workers.cpp  emulation_workers.hpp  enrich.cpp  enrich.hpp  entry_state.cpp  entry_state.hpp  evidence_apply.cpp  evidence_apply.hpp  evidence_apply_policy.cpp  evidence_apply_policy.hpp  evidence_bridge.cpp  evidence_bridge.hpp  evidence_lifecycle.cpp  evidence_lifecycle.hpp  evidence_store.cpp  evidence_store.hpp  (+24 more)
tests/: abi_policy_test.cpp  decoder_core_test.cpp  deobf_analysis_test.cpp  diagnostics_test.cpp  emu_evidence_test.cpp  emulation_workers_test.cpp  evidence_apply_policy_test.cpp  evidence_lifecycle_test.cpp  evidence_store_test.cpp  hexrays_bridge_test.cpp  ida_evidence_persistence.py  ida_hexrays_bridge_smoke.py  ida_observability_smoke.py  ida_provider_smoke.py  ida_worker_smoke.py  program_model_test.cpp  run_ida_evidence_persistence.sh  run_ida_hexrays_bridge.sh  runtime_enrich_core_test.cpp  smir_analysis_test.cpp  verify_observability_log.py  viy_config_test.cpp
tests/fixtures/: integration_x86_64.c
